fix(Lotto): 로또 리스트 및 번호 리스트 불변 객체 반환 로직 메서드 변경